<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/editText1Id"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:hint="@string/editText1_text"
            android:inputType="numberDecimal"

            android:autofillHints="" tools:targetApi="o"/>

        <EditText
            android:id="@+id/editText2Id"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:hint="@string/editText2_text"
            android:inputType="numberDecimal"

            android:autofillHints="" tools:targetApi="o"/>

        <Button
            android:id="@+id/addButtonId"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:text="@string/add_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/subButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/resultTextViewId"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/genderTextViewId"
            android:text="@string/gender_text"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/male_text"
            android:textSize="20sp"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/female_text"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/maritalTextViewId"
            android:text="@string/marital_text"
            />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/married_text"
                android:textSize="20sp"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/unmarried_text"
                android:textSize="20sp"
                />

        </RadioGroup>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleButton"
            android:textOff="@string/wifioff_text"
            android:textOn="@string/wifion_text"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerId"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/spinnerTextViewId"
            />

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


    </LinearLayout>



</ScrollView>